--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 #dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 
